# ggr2glsl

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  main.cpp
src/: color.cpp  color.hpp  main.cpp  segment.cpp  segment.hpp
